SERVER-92449 Add capped collection key deletions to slow query log (#26052)

GitOrigin-RevId: 7d97a950b11657d3b50cdfd38811d7ebc2965901